<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">    <modelVersion>4.0.0</modelVersion>    <groupId>ru.kos.neb</groupId>    <artifactId>neb_lib</artifactId>    <version>1.0</version>    <packaging>jar</packaging>    <dependencies>        <dependency>            <groupId>org.testng</groupId>            <artifactId>testng</artifactId>            <version>6.8.1</version>            <scope>test</scope>        </dependency>        <dependency>            <groupId>org.snmp4j</groupId>            <artifactId>snmp4j</artifactId>            <version>3.4.3</version>        </dependency>        <dependency>            <groupId>commons-net</groupId>            <artifactId>commons-net</artifactId>            <version>3.6</version>        </dependency>        <dependency>            <groupId>com.jcraft</groupId>            <artifactId>jsch</artifactId>            <version>0.1.54</version>        </dependency>        <dependency>            <groupId>com.googlecode.json-simple</groupId>            <artifactId>json-simple</artifactId>            <version>1.1.1</version>        </dependency>        <dependency>            <groupId>log4j</groupId>            <artifactId>log4j</artifactId>            <version>1.2.17</version>        </dependency>    </dependencies>    <properties>        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        <maven.compiler.source>23</maven.compiler.source>        <maven.compiler.target>23</maven.compiler.target>    </properties>    <name>neb_lib</name>    <build>        <plugins>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-compiler-plugin</artifactId>                <version>3.11.0</version>                <configuration>                    <compilerArgs>                        <arg>--enable-preview</arg>                    </compilerArgs>                </configuration>            </plugin>        </plugins>    </build></project>